--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -28,3 +28,21 @@ nav {
 .nav-link {
   color: white !Important;
 }
+
+.formulario{
+  margin-top: 50px;
+  padding: 50px;
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.tabcontent {
+  border: solid 1px grey;
+  padding: 30px;
+}
+
+.form-control{
+  width: 100% !important;
+}
+
