--- a/views/cadastroSalas.hbs
+++ b/views/cadastroSalas.hbs
@@ -1,8 +1,9 @@
- <div id="pessoas" class="tabcontent">
-    <h3 id="title">Cadastro de pessoas</h3>
+<div class="formulario">
+  <div class="tabcontent">
+    <h3>Cadastro de Salas</h3>
 
-<form>
-  <div class="mb-3">
+  <form>
+    <div class="mb-3">
     <label for="nomesala" class="form-label"><strong>Nome da Sala</strong></label>
     <input type="text"  class="form-control" name="nomesala" id="nomesala" required>
   </div>
@@ -12,7 +13,9 @@
     <input type="number" class="form-control" name="lotacao" id="lotacao" required>
   </div>
   
-  <button type="submit" class="btn btn-primary" onclick="salvar()">Salvar</button>
-</form>
-
+  <div class="d-grid gap-2 d-md-flex justify-content-md-end">
+                <button class="btn btn-primary" onclick="Salvar()">Salvar
+            </div>
+  </form>
+  </div>
 </div>
