--- a/views/cadastroPessoa.hbs
+++ b/views/cadastroPessoa.hbs
@@ -1,17 +1,21 @@
-  <div id="pessoas" class="tabcontent">
-    <h3 id="title">Cadastro de pessoas</h3>
-    <form>
+<div class="formulario">
+  <div class="tabcontent">
+    <h3>Cadastro de pessoas</h3>
 
-  <div class="mb-3">
-    <label for="nome" class="form-label"><strong>Nome</strong></label>
-    <input type="text" class="form-control" id="nome" required>
-  </div>
+  <form>
+    <div class="mb-3">
+      <label for="nome" class="form-label" style=""><strong>Nome</strong></label>
+      <input type="text" class="form-control" id="nome" required>
+    </div>
 
-  <div class="mb-3">
-    <label for="sobrenome" class="form-label"><strong>Sobrenome</strong></label>
-    <input type="text" class="form-control" id="sobrenome" required>
-  </div>
+    <div class="mb-3">
+      <label for="sobrenome" class="form-label"><strong>Sobrenome</strong></label>
+      <input type="text" class="form-control" id="sobrenome" required>
+    </div>
 
-  <button type="submit" class="btn btn-primary" onclick="Salvar()">Salvar</button>
-</form>
+    <div class="d-grid gap-2 d-md-flex justify-content-md-end">
+                <button class="btn btn-primary" onclick="Salvar()">Salvar
+            </div>
+  </form>
   </div>
+</div>
