--- a/views/consultaDados.hbs
+++ b/views/consultaDados.hbs
@@ -1,38 +1,65 @@
-<div id="consulta" class="tabcontent">
-        <h3 id="title">Consultar dados</h3>
+<div class="formulario">
+  <div class="tabcontent">
+    <h3>Consultar dados</h3>
 
-        <form>
-            <fieldset class="group" style="display: flex; flex-direction: column; flex-wrap: nowrap;">
-    
-                <div class="field">
-                    <label for="consultaPessoa" class="form-label" ><strong>Consultar pessoa</strong></label>
-                    <input type="text"  class="form-control" name="consultaPessoa" id="consultaPessoa">
+    <form>
+      <fieldset
+        class="group"
+        style="display: flex; flex-direction: column; flex-wrap: nowrap;"
+      >
 
-                    <button class="btn btn-secondary" onclick="consultPerson()">Consultar Pessoa</button>
-                </div>
-                
-                <div class="field">
-                    <label for="deletePerson" class="form-label" ><strong>Excluir pessoa pelo ID</strong></label>
-                    <input type="text"  class="form-control"  name="deletePerson" id="deletePerson">
+        <div class="field">
+          <label for="consultaPessoa" class="form-label"><strong>Consultar
+              pessoa</strong></label>
+          <input
+            type="text"
+            class="form-control"
+            name="consultaPessoa"
+            id="consultaPessoa"
+          />
 
-                    <button class="btn btn-secondary" onclick="deletePersonId()">Deletar Pessoa</button>
-                </div>
+          <button class="btn btn-secondary" onclick="consultPerson()">Consultar
+            Pessoa</button>
+        </div>
 
-                <div class="field">
-                    <label for="listPerson" class="form-label"><strong>Pessoas cadastradas</strong></label>
+        <div class="field">
+          <label for="deletePerson" class="form-label"><strong>Excluir pessoa
+              pelo ID</strong></label>
+          <input
+            type="text"
+            class="form-control"
+            name="deletePerson"
+            id="deletePerson"
+          />
 
-                    <button class="btn btn-secondary" onclick="listPerson()">Consultar Pessoas</button>
-                </div>
+          <button class="btn btn-secondary" onclick="deletePersonId()">Deletar
+            Pessoa</button>
+        </div>
 
-                <div class="field">
-                    <label for="consultRoom" class="form-label"><strong>Consultar sala pelo ID</strong></label>
-                    <input type="text"  class="form-control" name="consultRoom" id="consultRoom">
+        <div class="field">
+          <label for="listPerson" class="form-label"><strong>Pessoas cadastradas</strong></label>
 
-                    <button class="btn btn-secondary" onclick="deletePersonId()">Consultar sala</button>
-                </div>
+          <button class="btn btn-secondary" onclick="listPerson()">Consultar
+            Pessoas</button>
+        </div>
 
-            </fieldset>
-        </form>
+        <div class="field">
+          <label for="consultRoom" class="form-label"><strong>Consultar sala
+              pelo ID</strong></label>
+          <input
+            type="text"
+            class="form-control"
+            name="consultRoom"
+            id="consultRoom"
+          />
 
-    </div>
-    
+            <div class="d-grid gap-2 d-md-flex justify-content-md-end">
+                <button class="btn btn-secondary" onclick="deletePersonId()">Consultar
+            </div>
+            sala</button>
+        </div>
+
+      </fieldset>
+    </form>
+  </div>
+</div>
