criação + paginas, estilização

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -8,12 +8,16 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
-    <nav class="nav nav-pills nav-justified">
-  <a class="nav-link" href="/">Inicio</a>
-  <a class="nav-link" href="/cadastroPessoa">Cadastro De Pessoas</a>
-  <a class="nav-link" href="/cadastroSalas">Cadastro de Salas</a>
-  <a class="nav-link" href="/consultaDados">Consulta de dados</a>
-</nav>
+    <div class="header">
+      <nav class="nav nav-pills nav-justified">
+        <img src="images/logo.png" width="80" height="80" />
+        <a class="nav-link" href="/">Cadastro De Pessoas</a>
+        <a class="nav-link" href="/cadastroSalas">Cadastro de Salas</a>
+        <a class="nav-link" href="/dadosPessoa">Dados Pessoa</a>
+        <a class="nav-link" href="/tabelaPessoa">Pessoas cadastradas</a>
+        <a class="nav-link" href="/dadosSala">Dados Sala</a>
+      </nav>
+    </div>
   </head>
   <body>
     {{{body}}}
