--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -29,8 +29,18 @@ nav {
   color: white !Important;
 }
 
+.nav-justified{
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  align-items: center;
+  background-color: rgb(3, 0, 0)
+}
+
+
 .formulario{
-  margin-top: 50px;
+  margin-top: 20px;
   padding: 50px;
   display:flex;
   flex-direction: column;
@@ -46,3 +56,34 @@ nav {
   width: 100% !important;
 }
 
+.header {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+.listagem{
+  margin-top: 20px;
+  margin-bottom: 20px;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  justify-content: center;
+  align-items: flex-start;
+}
+
+.listagem_valor{
+  margin-left: 20px;
+  display: flex;
+  flex-direction: row;
+}
+
+.valor{
+  margin-left: 15px;
+}
+
+.tabela{
+  border: 1px solid grey;
+  width: 85%;
+  margin-left: 100px;
+}
