--- a/views/tabelaPessoa.hbs
+++ b/views/tabelaPessoa.hbs
@@ -12,7 +12,12 @@
       </tr>
     </thead>
     <tbody>
-
+      {{#each users}}
+        <tr>
+                <td>{{user_name}}</td>
+                <td>{{user_email}}</td>
+                <td>{{user_mobile}}</td>
+        </tr>
     </tbody>
   </table>
 </div>
