correcao pro leo

--- a/views/tabelaPessoa.hbs
+++ b/views/tabelaPessoa.hbs
@@ -12,12 +12,13 @@
       </tr>
     </thead>
     <tbody>
-      {{#each users}}
+      {{!-- {{#each users}}
         <tr>
                 <td>{{user_name}}</td>
                 <td>{{user_email}}</td>
                 <td>{{user_mobile}}</td>
         </tr>
+         --}}
     </tbody>
   </table>
 </div>
