--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -11,7 +11,7 @@
     <div class="header">
       <nav class="nav nav-pills nav-justified">
         <img src="images/logo.png" width="100" height="100" />
-        <a class="nav-link" href="/">Cadastro De Pessoas</a>
+        <a class="nav-link" href="/cadastroPessoa">Cadastro De Pessoas</a>
         <a class="nav-link" href="/cadastroSalas">Cadastro de Salas</a>
         <a class="nav-link" href="/dadosPessoa">Dados Pessoa</a>
         <a class="nav-link" href="/tabelaPessoa">Pessoas cadastradas</a>
