leozinho vai acrescentar

--- a/views/cadastroSalas.hbs
+++ b/views/cadastroSalas.hbs
@@ -16,6 +16,7 @@
   <div class="d-grid gap-2 d-md-flex justify-content-md-end">
                 <button class="btn btn-primary" type="submit">Salvar
   </div>
+   {{#if message}} {{message}} {{/if}}
   </form>
   </div>
 </div>
