--- a/views/dadosSala.hbs
+++ b/views/dadosSala.hbs
@@ -9,20 +9,20 @@
       >
 
         <div class="field">
-          <label for="consultRoom" class="form-label"><strong>Consultar sala
+          <label for="_id" class="form-label"><strong>Consultar sala
               pelo ID</strong></label>
           <input
             type="text"
             class="form-control"
-            name="consultRoom"
-            id="consultRoom"
+            name="_id"
           />
 
           <div class="d-grid gap-2 d-md-flex justify-content-md-end">
             <button
               class="btn btn-secondary"
               style="margin-top: 10px"
-              onclick="deletePersonId()"
+              href='dadosSala/_id'
+              type='submit'
             >Consultar</button>
           </div>
         </div>
@@ -31,17 +31,17 @@
 
           <div class="listagem_valor">
             <label for="consultaPessoa">Id:</label>
-            <p  class="valor"><b>teste</b></p>
+            <p  class="valor" value="{{salaDetail._id}}"></p>
           </div>
 
           <div class="listagem_valor">
             <label for="consultaPessoa">Nome:</label>
-            <p  class="valor"><b>nome.teste</b></p>
+            <p  class="valor" value="{{salaDetail.sala}}"></p>
           </div>
 
           <div class="listagem_valor">
             <label for="consultaPessoa">Sobrenome:</label>
-            <p class="valor"><b>sobrenome.teste</b></p>
+            <p class="valor" value="{{salaDetail.lotacao}}"></p>
           </div>
 
         </div>
@@ -50,27 +50,23 @@
   <h3 style="padding-top: 10px">Alterar Dados</h3>
 </div>
         <div>
-          <label for="consultRoom" class="form-label">Nome da Sala</label>
+          <label for="sala" class="form-label">Nome da Sala</label>
           <input
             type="text"
             class="form-control"
-            name="consultRoom"
             id="nomeSala"
           />
 
-          <label for="consultRoom" class="form-label">Id da Sala</label>
+          <label for="_id" class="form-label">Id da Sala</label>
           <input
             type="text"
             class="form-control"
-            name="consultRoom"
-            id="numeroSala"
           />
 
           <div class="d-grid gap-2 d-md-flex justify-content-md-end">
             <button
               class="btn btn-secondary"
               style="margin-top: 10px"
-              onclick="deletePersonId()"
             >Alterar</button>
         </div>
       </fieldset>
