--- a/views/dadosPessoa.hbs
+++ b/views/dadosPessoa.hbs
@@ -64,7 +64,7 @@
             >Deletar pessoa</button>
           </div>
         </div>
-
+         {{#if message}} {{message}} {{/if}}
       </fieldset>
     </form>
   </div>
