--- a/views/tabelaPessoa.hbs
+++ b/views/tabelaPessoa.hbs
@@ -1,4 +1,4 @@
-<div style="display: flex; justify-content: center; margin-top: 20px;">
+{{!-- <div style="display: flex; justify-content: center; margin-top: 20px;">
   <h1>Tabela de pessoas cadastras</h1>
 </div>
 
@@ -15,4 +15,4 @@
 
     </tbody>
   </table>
-</div>
+</div> --}}
