--- a/views/dadosPessoa.hbs
+++ b/views/dadosPessoa.hbs
@@ -3,27 +3,15 @@
     <h3>Consultar dados</h3>
 
     <form method="get">
-      <fieldset
-        class="group"
-      
-        style="display: flex; flex-direction: column; flex-wrap: nowrap;"
-      >
+      <fieldset class="group" style="display: flex; flex-direction: column; flex-wrap: nowrap;">
 
         <div class="field">
           <label for="consultaPessoa" class="form-label">Consultar pessoa por
             <b>Nome</b></label>
-          <input
-            type="text"
-            class="form-control"
-            name="nome"
-          />
+          <input type="text" class="form-control" name="nome" />
 
           <div class="d-grid gap-2 d-md-flex justify-content-md-end">
-            <button
-              class="btn btn-secondary"
-              style="margin-top: 10px"
-              href='consultar/{{nome}}'
-            >Consultar</button>
+            <button class="btn btn-secondary" style="margin-top: 10px" href='consultar/{{nome}}'>Consultar</button>
           </div>
         </div>
 
@@ -31,17 +19,17 @@
 
           <div class="listagem_valor">
             <label for="consultaPessoa">Id:</label>
-            <p class="valor" value="{{userDetail.nome}}"></p>
+            <p class="valor" value="{{userDetail._id}}"></p>
           </div>
 
           <div class="listagem_valor">
             <label for="consultaPessoa">Nome:</label>
-            <p class="valor"><b>nome.teste</b></p>
+            <p class="valor" value="{{userDetail.nome}}"></p>
           </div>
 
           <div class="listagem_valor">
             <label for="consultaPessoa">Sobrenome:</label>
-            <p class="valor"><b>sobrenome.teste</b></p>
+            <p class="valor"value="{{userDetail.sobrenome}}"</p>
           </div>
 
         </div>
@@ -49,22 +37,14 @@
         <div class="field">
           <label for="deletePerson" class="form-label">Excluir pessoa pelo
             <b>ID</b></label>
-          <input
-            type="text"
-            class="form-control"
-            nome="deletePerson"
-            id="deletePerson"
-          />
+          <input type="text" class="form-control" nome="name" />
 
           <div class="d-grid gap-2 d-md-flex justify-content-md-end">
-            <button
-              class="btn btn-secondary"
-              style="margin-top: 10px"
-              onclick="deletePersonId()"
-            >Deletar pessoa</button>
+            <button class="btn btn-secondary" style="margin-top: 10px" href='delete/{{_id}}'>Deletar
+              pessoa</button>
           </div>
         </div>
-         {{#if message}} {{message}} {{/if}}
+        {{#if message}} {{message}} {{/if}}
       </fieldset>
     </form>
   </div>
