--- a/views/dadosSala.hbs
+++ b/views/dadosSala.hbs
@@ -3,27 +3,16 @@
     <h3>Consultar dados</h3>
 
     <form>
-      <fieldset
-        class="group"
-        style="display: flex; flex-direction: column; flex-wrap: nowrap;"
-      >
+      <fieldset class="group" style="display: flex; flex-direction: column; flex-wrap: nowrap;">
 
         <div class="field">
           <label for="_id" class="form-label"><strong>Consultar sala
               pelo ID</strong></label>
-          <input
-            type="text"
-            class="form-control"
-            name="_id"
-          />
+          <input type="text" class="form-control" name="_id" />
 
           <div class="d-grid gap-2 d-md-flex justify-content-md-end">
-            <button
-              class="btn btn-secondary"
-              style="margin-top: 10px"
-              href='dadosSala/_id'
-              type='submit'
-            >Consultar</button>
+            <button class="btn btn-secondary" style="margin-top: 10px" href='dadosSala/_id'
+              type='submit'>Consultar</button>
           </div>
         </div>
 
@@ -31,44 +20,34 @@
 
           <div class="listagem_valor">
             <label for="consultaPessoa">Id:</label>
-            <p  class="valor" value="{{salaDetail._id}}"></p>
+            <p class="valor" value="{{salaDetail._id}}"></p>
           </div>
 
           <div class="listagem_valor">
             <label for="consultaPessoa">Nome:</label>
-            <p  class="valor" value="{{salaDetail.sala}}"></p>
+            <p class="valor" value="{{salaDetail.sala}}"></p>
           </div>
 
           <div class="listagem_valor">
             <label for="consultaPessoa">Sobrenome:</label>
-            <p class="valor" value="{{salaDetail.lotacao}}"></p>
+            <p class="valor" value='{{salaDetail.lotacao}}'></p>
           </div>
 
         </div>
 
-<div>
-  <h3 style="padding-top: 10px">Alterar Dados</h3>
-</div>
+        <div>
+          <h3 style="padding-top: 10px">Alterar Dados</h3>
+        </div>
         <div>
           <label for="sala" class="form-label">Nome da Sala</label>
-          <input
-            type="text"
-            class="form-control"
-            id="nomeSala"
-          />
+          <input type="text" class="form-control" id="nomeSala" />
 
           <label for="_id" class="form-label">Id da Sala</label>
-          <input
-            type="text"
-            class="form-control"
-          />
+          <input type="text" class="form-control" />
 
           <div class="d-grid gap-2 d-md-flex justify-content-md-end">
-            <button
-              class="btn btn-secondary"
-              style="margin-top: 10px"
-            >Alterar</button>
-        </div>
+            <button class="btn btn-secondary" style="margin-top: 10px" href='update/{{_id}}'>Alterar</button>
+          </div>
       </fieldset>
     </form>
   </div>
