--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,2 +1,1 @@
-<h1>{{title}}</h1>
-<p>Welcome to {{title}}</p>
+<h3 style="display: flex; align-items: center; justify-content: center; margin-top: 200px;">Bem vindo!!</h3>
